Draft 3--sent to Roger for review.

--- a/pnsac/newsletter/article_ContactInfo.tex
+++ b/pnsac/newsletter/article_ContactInfo.tex
@@ -95,21 +95,30 @@ Treasurer\\
 %\address{PNSAC Newsletter postal and Web site addresses:}
 
 
-\scriptsize\address{PNSAC\\
+\address{PNSAC\\
 P.O.Box 44005\\
 Ottawa, ON\\
 K1K 4P8}\\
 
-\scriptsize\address{Web site: {\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}\\
+\address{Web site: {\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}\\
 	General enquiries:\email{info@projectnorthstar.ca}}
 
 
+%\scriptsize\address{PNSAC\\
+%P.O.Box 44005\\
+%Ottawa, ON\\
+%K1K 4P8}\\
+%
+%\scriptsize\address{Web site: {\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}\\
+%	General enquiries:\email{info@projectnorthstar.ca}}
 
-\begin{figure}
-    \centering
-    \mbox{\subfigure{ \href{http://www.facebook.com/PNSAC/}{\includegraphics[scale=0.1]{../images/facebook_128x128.pdf}}}\quad
-    \subfigure{ \href{http://twitter.com/PnsacComms/}{\includegraphics[scale=0.1]{../images/twitter_128x128.pdf}}}}
-\end{figure}
+
+
+%\begin{figure}
+%    \centering
+%    \mbox{\subfigure{ \href{http://www.facebook.com/PNSAC/}{\includegraphics[scale=0.1]{../images/facebook_128x128.pdf}}}\quad
+%    \subfigure{ \href{http://twitter.com/PnsacComms/}{\includegraphics[scale=0.1]{../images/twitter_128x128.pdf}}}}
+%\end{figure}
 
 
 
