--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -23,7 +23,7 @@ diminution in the amount of restoration work we have been able to do. The result
 has been a decline in the number of volunteers working on the aircraft, and a
 corresponding decline in our membership. This in turn has led to an overall
 decline in the Association's activities, including the publication of this
-newsletter. CASM has made some major changes to its personnel, including those
+newsletter. CASM has made some important changes to its personnel, including those
 directly responsible for the restoration of the North Star. The Association is
 already experiencing a positive change in its relationship with the Museum which
 can only be to the good. We look forward to a renewed partnership with CASM to
