--- a/pnsac/newsletter/article_MemberInterview.tex
+++ b/pnsac/newsletter/article_MemberInterview.tex
@@ -38,7 +38,7 @@ In 1968 I joined Air Canada as a junior engineer in the Mechanical
 Systems Department and assigned as a landing gear technologist until I
 achieved Professional Engineer status in 1974. I then moved around
 several other departments in engineering and maintenance until I was
-promoted to Superintendent of DC9 maintenance. In that capacity I was
+promoted to Superintendent of DC 9 maintenance. In that capacity I was
 involved in the accident investigation into the loss of one aircraft at
 Cincinnati.
 
@@ -81,8 +81,8 @@ Museum's staff manager.
 
 3. \textit{What has been the history of your involvement to date?}
 
-I worked on the Project for 10 years starting in 2003 both as a “hands
-on” volunteer as well as a member of the board of directors and officer
+I worked on the Project for 10 years starting in 2003 both as a "hands
+on" volunteer as well as a member of the board of directors and officer
 of the Association. Generally I put in at least two days per week and
 sometimes more. 
 
