--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -10,71 +10,70 @@
 
 \maketitle
 
-The last North Star Chronicle was published in March 2016 and since that time we
-have successfully continued our work on the aircraft while the Museum was making
-preparations for the Star Trek event in the Reserve Hangar. We were not asked to
-suspend our work, unlike in 2014 when preparations for the Star Wars event were
-being made. This has helped us to retain our Restoration volunteers and recruit
-two new ones. However, we are still short of Restoration volunteers and continue
-to actively work with the Museum to address this problem.
+The last NStar Chronicle was published in June 2016 and since that time we have
+continued our work on the aircraft, but at a greatly reduced pace. Last summer
+the Museum staged a Star Trek event in the Reserve Hanger which affected our
+ability to work on the North Star. We were not asked to suspend our work until
+the end of September, unlike in 2014 when preparations for the Star Wars event
+were being made. This helped us retain our Restoration volunteers and recruit
+two new ones.
 
-When Project North Star was originally formed in 2004, the Association was
-treated with considerable skepticism by the Museum. It was felt that restoring
+At the end of September, Mike Irvin, the Museum's Conservation Special Projects
+Manager, retired and we were asked to suspend work on the aircraft until a new
+manager was appointed. In January, R\'{e}jean (Rej) Demers was appointed as the new
+Special Projects Manager. Our work on the aircraft resumed on January 30th.
+
+When Project North Star was originally formed in 2003, the Association was
+treated with considerable scepticism by the Museum. It was felt that restoring
 an aircraft of the size and complexity of a North Star, to the exacting
 standards of a national museum, was likely to be beyond the capabilities of a
 group of volunteers and that the project would probably fail.
 
-We will soon have completed 70,000 hours of volunteer work over a period of 14
-years, restoring everything we do, to what is acknowledged to be a very high
-standard. Skepticism is a thing of the past and we are now treated as a
+We have now completed approximately 70,000 hours of volunteer work over a period
+of 14 years, restoring everything we do to what is acknowledged to be a very
+high standard. Scepticism is a thing of the past and we are now treated as a
 respected and ongoing part of the Museum operations.
 
-Respect has to be earned and comes through hard work and in the case of aircraft
+Respect must be earned and comes through hard work and in the case of aircraft
 restoration work, attention to detail. Our team of volunteers needs guidance
 both from the Museum staff and from our own senior volunteers. One volunteer has
 been particularly important in helping us the get to the position we are now in.
-He has recently reached a milestone only reached on two other occasions by a
-volunteer and in each case the volunteer worked in the the Science and
-Technology Museum. Our volunteer has reached 10,000 volunteer hours of working
-on the North Star and throughout this time he also acted as our Project Manager
-for everything except the engines. Bruce Gemmill probably was not aware that he
-had reached 10,000 hours when he unfortunately had to announce that he would
-have to suspend his activities as a volunteer and director of PNSAC due to
-family circumstances. We very much hope that he will soon be able to rejoin us
-and continue to help us complete this large project. In the meantime Bruce will
-continue to be our Membership Secretary. During June, Bruce's remarkable
-contribution was recognized by the Museum and in a private event he was
-presented with a certificate and a gift by Cedric St Amour, the Museum
-Corporation Volunteer Coordinator. One of our volunteers, Robert Desjardins,
-also joined Cedric on the occasion to congratulate Bruce on behalf of PNSAC.
-Well done Bruce and we are all very proud of your achievement.
+Last year he reached a milestone only achieved on two other occasions by a
+volunteer and in each case the volunteer worked at the Science and Technology
+Museum. Our volunteer has worked 10,000 volunteer hours on the North Star and
+for most of this time he also acted as our Project Manager for everything except
+the engines. Bruce Gemmill probably was not aware that he had reached 10,000
+hours when during June, his remarkable contribution was recognized by the Museum
+and in a private event he was presented with a certificate and a gift by Cedric
+St-Amour, the Museum Corporation Volunteer Co-ordinator.
 
-I have always seen our Association as having multiple roles. First and foremost
-we are restoring a major artifact with our volunteers; secondly we show off our
+I have always seen our Association as having multiple roles. First and foremost,
+we are restoring a major artifact with our volunteers. Secondly, we show off our
 restoration work to the public which in turn brings visitors and revenue into
-the Museum and thirdly through our experienced volunteers we help to transfer
+the Museum and thirdly through our experienced volunteers we help transfer
 skills to younger and less experienced volunteers.
 
-Planning our work in conjunction with the Museum management and the conservation
-staff is something we must always try to jointly do better. It is often a fine
-balancing act to decide when to do work on the aircraft in relation to when the
-Museum is having a major event such as Canada Day. I am hoping that in future we
-can regularly update our work schedule in conjunction with our project plan so
-that we can more readily have the aircraft available for public viewing at the
-times when the Museum would like us to do so, without having to delay our
-restoration work unnecessarily.
+Planning our work in conjunction with the Museum management and the Conservation
+staff is something we must continuously work at. It is often a fine balancing
+act to decide when to do work on the aircraft in relation to when the Museum is
+having a major event such as Open Doors Ottawa and Canada Day. I am hoping that
+in future we can regularly update our work schedule in conjunction with our
+project plan so that we can more readily have the aircraft available for public
+viewing at the times when the Museum would like us to do so, without having to
+delay our restoration work unnecessarily.
+
+During the last year, we were able to hold two of our successful Lecture Series
+events and are planning to hold another one in May of this year. More details of
+the next event will be available soon.
 
 I will conclude with an invitation to any of our members not volunteering at
-present to come and join us. Although we have a definite limit on the number of
-volunteers who can get their hands dirty working on restoration work, we always
-welcome others who would like to participate in the running of the organization.
-By becoming involved either as a restoration volunteer or an association
-volunteer you will meet other like minded people and have an interesting time
-talking to members of the public. You do not need to be an expert on aviation or
-on the North Star to make a contribution. I can be reached by email or phone if
-you would like to find out more about volunteering.
-
-
+present to come and join us. Although we have a limit on the number of
+volunteers who can get their hands dirty working on restoration, we always
+welcome others who would like to join us at our events. You will meet other
+likeminded people and have an interesting time talking to members of the public.
+You do not need to be an expert on aviation or on the North Star to contribute.
+You can contact me by email at the address at the end of this newsletter if you
+would like to find out more about volunteering.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
