--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -156,11 +156,11 @@
 
 % Forthcoming events ................................................. %
 
-%\begin{article}
-%   \input{article_ForthEvents} 
-%\end{article}
+\begin{article}
+   \input{article_ForthEvents} 
+\end{article}
 
-\pagebreak
+%\pagebreak
 
 
 % Board members/contact info ......................................... %
