Incorporating latest changes after review of DRAFT #3.

--- a/pnsac/PNSAC.sty
+++ b/pnsac/PNSAC.sty
@@ -103,7 +103,7 @@
   \end{center}
 %  PNSAC newsletter\hfill
 %\begin{small}
-\textbf{P}roject \textbf{N}orth \textbf{S}tar \textbf{A}ssociation of \textbf{C}anada
+\textbf{T}he \textbf{P}roject \textbf{N}orth \textbf{S}tar \textbf{A}ssociation of \textbf{C}anada
 %\end{small}
 \hfill
   Volume \PNSAC@volume | Issue \PNSAC@issue | \PNSAC@date\\[-.5\baselineskip]
