--- a/pnsac/newsletter/article_ForthEvents.tex
+++ b/pnsac/newsletter/article_ForthEvents.tex
@@ -13,6 +13,9 @@
 %June 5, 2014     \hspace{50mm}\= Board of Directors' Meeting\\
 %{\normalfont\color{red}May 02, 2015}   \hspace{50mm}\= 
 %{\normalfont\color{red}Members' Quarterly Meeting}\\
+\textbf{Thursday, April 13, 2017}   \hspace{48mm}\=  Board of Directors Meeting\\ 
+%  Add blank line
+ \> \\
 \textbf{Saturday, May 6, 2017}   \hspace{50mm}\=  \\ 
 \end{tabbing}
 \vspace{-5mm}
@@ -23,7 +26,9 @@ CF-TCC, it's early restoration and events, as well as participation leading up t
 Air Canada's 70th Anniversary.
 
 \begin{tabbing}
-
+\textbf{Tuesday, May 23, 2017}   \hspace{52mm}\=  Volunteer Appreciation Dinner\\ 
+%  Add blank line
+ \> \\
 \textbf{Saturday and Sunday, June 3 \& 4, 2017}  \hspace{25mm}\= \\ 
 \end{tabbing}
 \vspace{-5mm}
