--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -10,15 +10,14 @@
 
 \maketitle
 
-The last NStar Chronicle was published in June 2016 and since that time we have
+The last NStar Chronicle was published in March 2016 and since that time we have
 continued our work on the aircraft, but at a greatly reduced pace. Last summer
 the Museum staged a Star Trek event in the Reserve Hanger which affected our
 ability to work on the North Star. We were not asked to suspend our work until
 the end of September, unlike in 2014 when preparations for the Star Wars event
-were being made. This helped us retain our Restoration volunteers and recruit
-two new ones.
+were being made. 
 
-At the end of September, Mike Irvin, the Museum's Conservation Special Projects
+At the end of September 2016, Mike Irvin, the Museum's Conservation Special Projects
 Manager, retired and we were asked to suspend work on the aircraft until a new
 manager was appointed. In January, R\'{e}jean (Rej) Demers was appointed as the new
 Special Projects Manager. Our work on the aircraft resumed on January 30th.
@@ -66,14 +65,24 @@ During the last year, we were able to hold two of our successful Lecture Series
 events and are planning to hold another one in May of this year. More details of
 the next event will be available soon.
 
+The Annual General Meeting of the Association was held on March 11, 2017 at the 
+Museum. It was gratifying to see a good turnout of members, given the difficult
+times our organization has gone through in the past few years. Both the Museum's 
+Volunteer Coordinator, Cedric St. Amour, and the new Special Projects Manager 
+R\'{e}jean Demers gave up their Saturday mornings to come and address our members. 
+Their presentations were very well received and are further evidence of a new 
+era in our relationship with the Museum.
+
 I will conclude with an invitation to any of our members not volunteering at
 present to come and join us. Although we have a limit on the number of
-volunteers who can get their hands dirty working on restoration, we always
-welcome others who would like to join us at our events. You will meet other
-likeminded people and have an interesting time talking to members of the public.
-You do not need to be an expert on aviation or on the North Star to contribute.
-You can contact me by email at the address at the end of this newsletter if you
-would like to find out more about volunteering.
+volunteers who can get their hands dirty working on restoration, our organization 
+needs  volunteers to assist with other Association activities including merchandise
+sales, special events, fund raising, communications and administrative work. Whether
+you are working on the plane or doing other Association work you will meet likeminded
+people and have the opportunity to speak to the general public. You do not need to 
+be an expert on aviation or on the North Star to contribute. You can contact me by 
+email at the address at the end of this newsletter if you would like to find out 
+more about volunteering.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
