--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -6,7 +6,7 @@
 
 \title{Project Progress Report}
 \subtitle{PNS 2016 Status Update}
-\author{Bruce Gemmill, Peter Trowbridge, Garry Dupont}
+\author{Bruce Gemmill, Peter Trobridge, Garry Dupont}
 
 \maketitle
 
@@ -23,7 +23,7 @@ begun on the air intake system, and many of the fuel and oil lines.
    \vspace{2em}
    \centering
    \includegraphics[scale=0.5]{"PNS 007-im2".png}
-   \caption*{\small \em Volunteer Peter Trowbridge inspecting the air intake fairing from engine \#4 prior to beginning restoration work.}
+   \caption*{\small \em Volunteer Peter Trobridge inspecting the air intake fairing from engine \#4 prior to beginning restoration work.}
    \label{fig:engine_no_4_2}
 \end{figure}
 
