--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -160,7 +160,7 @@
    \input{article_ForthEvents} 
 \end{article}
 
-%\pagebreak
+\pagebreak
 
 
 % Board members/contact info ......................................... %
